# commonchat

./: .gitignore  README.md
commonware-source/cryptography/: Cargo.toml
commonware-source/cryptography/src/: certificate.rs  lib.rs
core/: Cargo.toml
core/.cargo/: config.toml
core/src/: lib.rs
frontend/: README.md  commonchat-core.d.ts  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/hooks/: useIdentity.ts
frontend/commonchat-core/: commonchat_core.d.ts  commonchat_core.js
frontend/src/commonchat-core/: commonchat_core_bg.wasm  package.json
frontend/src/commonware-lib/: commonchat_core.d.ts  commonchat_core.js  commonchat_core_bg.wasm  commonchat_core_bg.wasm.d.ts  package.json
relay/: README.md  package-lock.json  package.json  server.js
