[package]
name = "commonchat-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
commonware-math = { path = "../commonware-source/math" }
commonware-codec = { path = "../commonware-source/codec" }
bytes = "1.0"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
rand = "0.8"

# Cryptography: x25519, ed25519, chacha20poly1305, hkdf, sha2
x25519-dalek = { version = "2", features = ["static_secrets"] }
curve25519-dalek = "4"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Native (non-WASM): tam cryptography + p2p + tokio
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
commonware-cryptography = { path = "../commonware-source/cryptography" }
commonware-p2p = { path = "../commonware-source/p2p" }
tokio = { version = "1", features = ["full"] }

# WASM (tarayıcı): blst yok (sadece ed25519), getrandom "js"
[target.'cfg(target_arch = "wasm32")'.dependencies]
commonware-cryptography = { path = "../commonware-source/cryptography", default-features = false, features = [
    "std",
] }
getrandom = { version = "0.2", features = ["js"] }
